# text_embedding

./: .gitignore  Pipfile  README.md  access_colab.py  pyproject.toml  setup.py
examples/: inference_encoder_decoder.py  maze.txt  run_deep_q.py  run_encoder_decoder.py  run_gensim_w2v.py  run_gpt.py  run_my_w2v.py  run_opts_by_cifar10.py  train_cart_pole.py  train_cifar10_classifier.py  train_encoder_decoder.py  train_gensim_w2v.py  train_maze.py  train_my_w2v.py
examples/archive/: run_imdb.py  run_squad_v1.py  run_squad_v2.py
examples/preprocess/: bilingual_data_set.py
mltools/: utils.py
mltools/archive/: interfaces.py  setup.py  utils.py
mltools/archive/dataset/: imdb_processor.py
mltools/archive/metrics/: common_metrics.py  squad_metrics.py
mltools/archive/models/: bert.py  common_models.py  elmo.py  gpt.py  poincare_embedding.py  random_forest_wrapper.py  scdv.py  self_attention_lstm.py  transformer.py  w2v_wrapper.py
mltools/archive/optimizer/: parameter_optimization.py
mltools/archive/preprocessor/: label_preprocessor.py  text_preprocessor.py  train_sentencepiece.py
mltools/archive/text_embedding/: convert.py  gaussian_mixture.py  tsne_embedding.py  umap_embedding.py
mltools/archive/train/: bert_pretrain.py  elmo_pretrain.py  gpt_pretrain.py  poincare_embedding_train.py  w2v_train.py
mltools/dataset/: cifar10.py  japanese_english_bilingual_corpus.py  tanaka_corpus.py  wikipedia_ja.py
mltools/metric/: metric_manager.py
mltools/model/: attention_utils.py  cnn.py  encoder_decoder.py  gpt.py  image_classification.py  resnet.py  word2vec.py  word2vec_impl.cpp  word2vec_impl.pyx
mltools/model/tensorflow/: encoder_decoder.py  image_classification.py
mltools/optimizer/: util.py  utils.py
mltools/preprocessor/: augmenter.py
scripts/: train_cifar10_classifier.ps1  train_cifar10_classifier.sh  train_encoder_decoder.ps1  train_encoder_decoder.sh
test/: python_unit_test.py  word2vec_impl_test.cpp
venvs/gym/: pyproject.toml
venvs/torch_cpu/: pyproject.toml
venvs/torch_gpu/: pyproject.toml
(+3 files in other folders)
