[tool.poetry]
name = "mltools"
version = "0.1.0"
description = ""
authors = ["Yuki Wada <yuki.w.228285@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.5"
pandas = "^1.2.0"
tqdm = "^4.56.0"
mecab-python-windows = [
    { version = "0.996.3", platform = 'win32' }
]
mecab-python3 = [
    { version = "0.996.3", platform = 'linux' }
]
dill = "^0.3.3"
matplotlib = "^3.3.3"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-1.7.1%2Bcpu-cp39-cp39-win_amd64.whl"}

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[tool.poetry.extras]
cython = ["Cython"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
